Fixed a few bugs in the test generation and evaluation for running expressions.